--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
   <!-- red container div -->
-  <div style="position: relative; display: inline-block">
+  <div style="position: relative; display: inline-block; 
+  margin-left: auto;
+  margin-right: auto;">
     <!-- smaller red container div -->
     <div style="
         position: absolute;
